[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/tax_window.gd" type="Script" id=2]

[node name="TaxWindow" type="WindowDialog"]
anchor_left = 0.2809
anchor_top = 0.265
anchor_right = 0.631486
anchor_bottom = 0.446667
margin_left = -0.641174
margin_right = -0.641174
window_title = "RCI"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TaxSlidersCtr" type="VBoxContainer" parent="."]
anchor_left = 0.0167131
anchor_top = 0.0666667
anchor_right = 0.874652
anchor_bottom = 0.6
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResCtr" type="HSplitContainer" parent="TaxSlidersCtr"]
margin_top = 1.0
margin_right = 308.0
margin_bottom = 17.0
dragger_visibility = 1

[node name="ResLbl" type="Label" parent="TaxSlidersCtr/ResCtr"]
margin_top = 1.0
margin_right = 71.0
margin_bottom = 15.0
text = "Residential"
align = 2

[node name="ResSlider" type="HSlider" parent="TaxSlidersCtr/ResCtr"]
margin_left = 83.0
margin_right = 308.0
margin_bottom = 16.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="ComCtr" type="HSplitContainer" parent="TaxSlidersCtr"]
margin_top = 21.0
margin_right = 308.0
margin_bottom = 37.0
dragger_visibility = 1

[node name="ComLbl" type="Label" parent="TaxSlidersCtr/ComCtr"]
margin_top = 1.0
margin_right = 77.0
margin_bottom = 15.0
text = "Commerical"
align = 2

[node name="ComSlider" type="HSlider" parent="TaxSlidersCtr/ComCtr"]
margin_left = 89.0
margin_right = 308.0
margin_bottom = 16.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="IndCtr" type="HSplitContainer" parent="TaxSlidersCtr"]
margin_top = 41.0
margin_right = 308.0
margin_bottom = 57.0
dragger_visibility = 1

[node name="IndLbl" type="Label" parent="TaxSlidersCtr/IndCtr"]
margin_top = 1.0
margin_right = 57.0
margin_bottom = 15.0
text = "Industral"
align = 2

[node name="IndSlider" type="HSlider" parent="TaxSlidersCtr/IndCtr"]
margin_left = 69.0
margin_right = 308.0
margin_bottom = 16.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="PrecentCtr" type="VBoxContainer" parent="."]
anchor_left = 0.88329
anchor_top = 0.0790961
anchor_right = 0.991643
anchor_bottom = 0.555287
margin_bottom = -20.339
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResPctLbl" type="Label" parent="PrecentCtr"]
margin_right = 38.0
margin_bottom = 14.0
text = "1%"

[node name="ComPctLbl" type="Label" parent="PrecentCtr"]
margin_top = 18.0
margin_right = 38.0
margin_bottom = 32.0
text = "1%"

[node name="IndPctLbl" type="Label" parent="PrecentCtr"]
margin_top = 36.0
margin_right = 38.0
margin_bottom = 50.0
text = "1%"

[node name="IncomeCtr" type="HBoxContainer" parent="."]
anchor_left = 0.00835655
anchor_top = 0.642202
anchor_right = 0.97493
anchor_bottom = 0.834862
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IcnomeLbl" type="Label" parent="IncomeCtr"]
margin_top = 3.0
margin_right = 90.0
margin_bottom = 17.0
text = "Income: $0/yr"

[node name="ExpensivesLbl" type="Label" parent="IncomeCtr"]
margin_left = 94.0
margin_top = 3.0
margin_right = 206.0
margin_bottom = 17.0
text = "Expensives: $0/yr"

[connection signal="value_changed" from="TaxSlidersCtr/ResCtr/ResSlider" to="." method="_on_ResSlider_value_changed"]
[connection signal="value_changed" from="TaxSlidersCtr/ComCtr/ComSlider" to="." method="_on_ComSlider_value_changed"]
[connection signal="value_changed" from="TaxSlidersCtr/IndCtr/IndSlider" to="." method="_on_IndSlider_value_changed"]
